now displaying some current weather data

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -19,12 +19,14 @@
         .logo-text {
             font-size: 1.7rem;
             font-family: Monomaniac One, sans-serif;
+            font-style: italic;
         }
     }
     .current-city-display {
         text-align: center;
         font-family: Libre Franklin, sans-serif;
         font-size: 1.2rem;
+        
         
         background: #748e93;
 
