--- a/src/Components/WeatherDisplay/WeatherDisplay.scss
+++ b/src/Components/WeatherDisplay/WeatherDisplay.scss
@@ -36,6 +36,7 @@
                 width: fit-content;
                 border-radius: 7px;
                 font-size: 1.1rem;
+                text-shadow: 0 0 2px rgb(0,0,0);
             }
            
         }
@@ -108,6 +109,7 @@
                         margin-bottom: 4px;
                     }
                     .temp-details-info-item-content {
+                        text-shadow: 0 0 2px rgb(0,0,0);
                         span {
                             margin: 0 5px;;
                         }
@@ -116,6 +118,7 @@
                         .temp-details-info-item-content {
                             font-size: 2.62rem;
                             font-weight: 700;
+                            text-shadow: 0 0 2px rgb(0,0,0);
                         }
                     }
                     &.feels-like {
@@ -126,6 +129,7 @@
                         .temp-details-info-item-content {
                             font-size: 1.2rem;
                             font-weight: 700;
+                            text-shadow: 0 0 2px rgb(0,0,0);
                         }
                     }
                 }
@@ -163,6 +167,7 @@
                     .extended-weather-details-item-content {
                         font-size: 1.1rem;
                         font-weight: 700;
+                        text-shadow: 0 0 2px rgb(0,0,0);
                         span {
                             margin: 0 3px;
                         }
